# postaplot

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: cookbook.md
postaplot/: __init__.py  core.py  legend.py  plotters.py  styling.py
scripts/: generate_figures.py
tests/: conftest.py  test_api.py  test_engine.py  test_legend.py  test_styling.py
