[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postaplot"
version = "0.1.0"
description = "Kernel-density based scatter plots with seaborn-like API."
authors = [
    { name = "Marcos Wappner", email = "marcoswappner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/mwappner/postaplot"
Issues = "https://github.com/mwappner/postaplot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["postaplot"]

[tool.setuptools]
package-dir = {"" = "."}

